--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter_clone",
+  "name": "twitter-clone",
   "version": "0.0.1",
   "description": "",
   "main": "src/app.js",
@@ -12,18 +12,14 @@
   "dependencies": {
     "array-union": "^1.0.2",
     "bluebird": "^3.4.1",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "crypto-js": "^3.1.6",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "hbs": "~3.1.0",
     "immutable": "^3.8.1",
+    "koa": "^1.2.1",
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.0",
-    "morgan": "~1.6.1",
     "mpromise": "^0.5.5",
-    "q": "^1.4.1",
-    "serve-favicon": "~2.3.0"
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
@@ -34,7 +30,8 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-tsb": "^1.10.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^6.0.1",
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
     "jasmine": "^2.4.1",
