--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node ./src/bin/www",
+    "start": "node ./src/app.js",
     "test": "gulp test"
   },
   "author": "",
@@ -22,10 +22,8 @@
     "q": "^1.4.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.11.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
     "gulp-jasmine": "^2.4.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
