--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "array-union": "^1.0.2",
     "bluebird": "^3.4.1",
+    "chai": "^3.5.0",
     "crypto-js": "^3.1.6",
     "debug": "~2.2.0",
     "immutable": "^3.8.1",
     "koa": "^1.2.1",
+    "mocha": "^3.0.2",
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.0",
     "mpromise": "^0.5.5",
@@ -24,7 +26,6 @@
   "devDependencies": {
     "browser-sync": "^2.11.2",
     "gulp": "^3.9.0",
-    "gulp-jasmine": "^2.4.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -32,8 +33,6 @@
     "gulp-tslint": "^6.0.1",
     "gulp-typescript": "^2.12.1",
     "gulp-watch": "^4.3.5",
-    "jasmine": "^2.4.1",
-    "jasmine-reporters": "^2.2.0",
     "karma": "^0.13.22",
     "nodemon": "^1.9.1",
     "tern-node-express": "^0.4.0",
