--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "start": "node ./src/app.js",
+    "start": "node ./src/bin/www",
     "test": "gulp test"
   },
-  "author": "",
+  "author": "Dominik Kotecki",
   "license": "MIT",
   "dependencies": {
     "array-union": "^1.0.2",
     "bluebird": "^3.4.1",
+    "body-parser": "1.15.2",
     "chai": "^3.5.0",
+    "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.6",
-    "debug": "~2.2.0",
+    "debug": "2.2.0",
+    "express": "~4.14.0",
     "immutable": "^3.8.1",
-    "koa": "^1.2.1",
     "mocha": "^3.0.2",
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.0",
+    "morgan": "^1.7.0",
     "q": "^1.4.1"
   },
   "devDependencies": {
