--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1"
   },
   "devDependencies": {
