--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 # Test against this version of Node.js
 environment:
   nodejs_version: "6.3"
-
+services:
+  - mongodb
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
