--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "array-union": "^1.0.2",
     "bluebird": "^3.4.1",
     "body-parser": "1.15.2",
-    "chai": "^3.5.0",
     "cookie-parser": "~1.4.3",
     "crypto-js": "^3.1.6",
     "debug": "2.2.0",
     "express": "~4.14.0",
     "immutable": "^3.8.1",
-    "mocha": "^3.0.2",
     "moment": "^2.14.1",
     "mongodb": "^2.2.6",
     "mongoose": "^4.5.9",
@@ -30,7 +28,7 @@
     "ava": "^0.16.0",
     "browser-sync": "^2.14.0",
     "gulp": "^3.9.1",
-    "gulp-mocha": "^3.0.1",
+    "gulp-ava": "^0.14.1",
     "gulp-nodemon": "^2.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
