--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "declaration": false,
         "noEmitOnError": true,
         "module": "commonjs",
-        "target": "ES6"
+        "target": "ES6",
+        "allowJs": true
     }
 }
