--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.0.1",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^2.14.1",
     "gulp-watch": "^4.3.9",
     "karma": "1.2.0",
     "nodemon": "1.10.0",
@@ -44,6 +44,7 @@
     "supertest": "^2.0.0",
     "supertest-as-promised": "^4.0.0",
     "tern-node-express": "^0.4.0",
-    "tslint": "^3.14.0"
+    "tslint": "^3.14.0",
+    "typescript": "^2.0.3"
   }
 }
